--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,47 +4,88 @@ body {
     padding: 0 70px 0 70px;
     font-family: 'Roboto', sans-serif;
 }
-.grid {
+.grid{
     display: grid;
-    grid-template-columns: 20% 50% 25%;
-}
-
-.grid div{
+    grid-template-columns: 20% 50% 20%;
     padding: 5px;
 }
 
-.logo img {
+.logo img{
     width: 30px;
+
 }
 
-.border {
-    border-left: 1px solid gray;
-    border-right: 1px solid gray;
+.border{
+    border-left: 1px solid rgb(231, 231, 231);
+    border-right: 1px solid rgb(231, 231, 231);
 }
 
 .menu{
     margin-top: 15px;
     margin-right: 15px;
 }
+.menu .menu-item {
+    margin-bottom: 30px;
+}
 
 .menu .menu-item i{
     margin-right: 10px;
-    width: 15px;
+    width: 15px; /*pour que les menu soit bien aligné a coté des icones*/
 }
 
-.menu .menu-item {
-    margin-bottom: 15px;
-}
-
-.active {
+.active{
     color: #1d9bf0;
 }
-
 .tweet{
     background-color: #1d9bf0;
-    color: white;
+    color: #fff;
+    font-size: 17px;
+    line-height: 30px;
+    text-align: center;
     border: none;
-    width: 100%;
+    width: 100%; /*il prend 100% du container*/
     padding: 12px;
     border-radius: 30px;
+}
+
+
+
+
+/* profile utilisateur */
+
+
+.profile{
+    display: flex;
+    position: absolute;
+    bottom: 15px;
+    /* width: 100%; */
+}
+.profile:hover{
+    background-color: rgb(223, 220, 220);
+    padding: 10px;
+    border-radius: 50px;
+
+}
+
+.profile img{
+    float: left;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    margin-right: 10px;
+    margin-bottom: 00px;
+}
+.profile p{
+    padding: 0;
+    margin: 0;
+}
+.name{
+    width: 120px;
+}
+.name p:first-child{
+    font-weight: bold;
+}
+.more i{
+    padding-top: 10px;
+    margin-left: 0px;
 }
